--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,400;1,500;1,700&display=swap"rel="stylesheet"/>
+    <title>Bate papo uol</title>
 </head>
 <body>
-    
+    <header class="topo">
+        <div class="icone">
+          <img src="assets/logo 1.png" alt="erro"/>
+        </div>
+        <div class="icone">
+          <ion-icon name="people"></ion-icon>
+        </div>
+      </header>
+      <main class="bate-papo"></main>
+      <section class="caixa-batepapo">
+        <input
+          type="texto"
+          name="mensagem"
+          value="Escreva Aqui"
+          onclick="espaco(this)"/>
+        <button onclick="enviarMsg(this)" data-identifier="send-message">
+          <ion-icon name="paper-plane-outline"></ion-icon>
+        </button>
+      </section>
+      <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+      <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+      <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+      <script src="index.js"></script>
 </body>
 </html>
